github actions fix

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,26 +1,21 @@
 name: .NET
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET 3.1
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '3.1.x'
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.100
-    - name: Install dotnet ef
-      run: dotnet tool install --global dotnet-ef
-    - name: Build with dotnet
-      run: dotnet build --configuration Release CleanArchitecture.sln
+      - uses: actions/checkout@v2
+      - name: Setup .NET 6
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+      - name: Install dotnet ef
+        run: dotnet tool install --global dotnet-ef
+      - name: Build with dotnet
+        run: dotnet build --configuration Release CleanArchitecture.sln
